--- a/src/Hyper/AdsBundle/Resources/views/Admin/Advertiser/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Advertiser/index.html.twig
@@ -44,7 +44,7 @@
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ path('admin_advertiser_new') }}" class="btn pull-right">
+    <a href="{{ path('admin_advertiser_new') }}" class="btn btn-link pull-right">
         {{ 'create.new.entry'|babel }}
     </a>
 </div>
