--- a/src/Hyper/AdsBundle/Resources/views/Admin/Announcement/new.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Announcement/new.html.twig
@@ -28,7 +28,7 @@
         {{ form_rest(form) }}
     </div>
     <div class="form-actions">
-        <a href="{{ path('admin_announcement_index') }}" class="btn">{{ 'back.to.the.list'|babel }}</a>
+        <a href="{{ path('admin_announcement_index') }}" class="btn btn-link">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
             <input type="submit" class="btn btn-primary" value="{{ 'announcement.add'|babel }}">
         </div>
