--- a/src/Hyper/AdsBundle/Resources/views/Admin/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Page/index.html.twig
@@ -43,6 +43,6 @@
 <div class="message">{{ 'no.entities'|babel }}</div>
 {% endif %}
 <div class="additional-links">
-    <a href="{{ path('admin_page_new') }}" class="btn pull-right">{{ 'create.new.entry'|babel }}</a>
+    <a href="{{ path('admin_page_new') }}" class="btn btn-link pull-right">{{ 'create.new.entry'|babel }}</a>
 </div>
 {% endblock %}
