--- a/src/Hyper/AdsBundle/Resources/views/User/Announcement/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Announcement/edit.html.twig
@@ -29,7 +29,7 @@
         {{ form_rest(form) }}
     </div>
     <div class="form-actions">
-        <a class="btn" href="{{ path('user_announcement_index') }}">{{ 'back.to.the.list'|babel }}</a>
+        <a class="btn btn-link" href="{{ path('user_announcement_index') }}">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
             <input type="submit" name="action" class="btn btn-danger" value="{{ 'delete'|babel }}">
             <input type="submit" name="action" class="btn btn-primary" value="{{ 'save'|babel }}">
