--- a/src/Hyper/AdsBundle/Resources/views/User/Announcement/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Announcement/index.html.twig
@@ -33,7 +33,7 @@
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ url('user_announcement_new') }}" class="btn pull-right">{{ 'announcement.add'|babel }}</a>
+    <a href="{{ url('user_announcement_new') }}" class="btn btn-link pull-right">{{ 'announcement.add'|babel }}</a>
 </div>
 
 {% endblock %}
