--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/add.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/add.html.twig
@@ -9,7 +9,7 @@
         {{ form_widget(form) }}
     </div>
     <div class="form-actions">
-        <a class="btn" href="{{ url('user_banner_list') }}">{{ 'back.to.the.list'|babel }}</a>
+        <a class="btn btn-link" href="{{ url('user_banner_list') }}">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
             <button type="submit" class="btn btn-primary">{{ 'save'|babel }}</button>
         </div>
