--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/zones.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/zones.html.twig
@@ -54,7 +54,7 @@
         </tbody>
     </table>
     <div class="form-actions">
-        <a href="{{ path('user_banner_list') }}" class="btn">{{ 'back.to.the.list'|babel }}</a>
+        <a href="{{ path('user_banner_list') }}" class="btn btn-link">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
             <input class="btn btn-primary" type="submit" value="{{ 'save'|babel }}" />
         </div>
