--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,22 +10,22 @@
         <link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('components/fancybox/source/jquery.fancybox.pack.js') }}"></script>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     {% include "::navbar.html.twig" %}
 
     <div class="container">
-
         <div class="row">
 
             {% if is_granted("ROLE_USER") %}
-            <aside class="span3">
+            <aside class="col-md-3 col-lg-3">
                 {% include "::sidebar.html.twig" %}
             </aside>
             {% endif %}
 
-            <div class="row{% if is_granted("ROLE_USER") %} span9{% endif %}">
+            <div class="row{% if is_granted("ROLE_USER") %} col-md-9 col-lg-9{% endif %}">
                 {% include "::flashes.html.twig" %}
                 {% block body %}{% endblock %}
             </div>
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    {#<script type="text/javascript" src="{{ asset('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>#}
     {% block javascripts %}{% endblock %}
 
     </body>
