--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -1,31 +1,31 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container-fluid">
-            <a class="brand" href="{{ url('_welcome') }}">AcidAdServer</a>
-            <div class="nav-collapse collapse">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <p class="pull-right navbar-text">Zalogowany jako <strong>{{ app.user.username }}</strong></p>
-                <ul class="nav">
-                    <li>
-                        <a href="{{ url('fos_user_profile_edit') }}">{{ 'edit.profile'|babel|lower }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('fos_user_security_logout') }}">
-                            {{ 'layout.logout'|trans({}, 'FOSUserBundle')|lower }}
-                        </a>
-                    </li>
-                </ul>
-                {% else %}
-                <ul class="nav">
-                    <li>
-                        <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a>
-                    </li>
-                </ul>
-                {% endif %}
-            </div>
-        </div>
+<nav class="navbar navbar-fixed-top" role="navigation">
+
+    <div class="navbar-header">
+        <a class="navbar-brand" href="{{ url('_welcome') }}">{{ 'layout.title'|babel }}</a>
     </div>
-</div>
+
+    <div class="container">
+        <ul class="nav navbar-nav">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <li>
+                    <a href="{{ url('fos_user_profile_edit') }}">{{ 'edit.profile'|babel|lower }}</a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_security_logout') }}">
+                        {{ 'layout.logout'|trans({}, 'FOSUserBundle')|lower }}
+                    </a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a>
+                </li>
+            {% endif %}
+        </ul>
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            <p class="pull-right navbar-text">{{ 'layout.navbar.login-info'|babel({'%user%': app.user.username})|raw }}</p>
+        {% endif %}
+    </div>
+</nav>
