--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -2,6 +2,10 @@ body {
   padding: 60px 0 20px 0;
 }
 
+ul.nav {
+  padding-right: 15px;
+}
+
 ul.no-buttons {
   list-style-type: none;
 }
@@ -53,21 +57,6 @@ table label.table {
   margin-left: 9px;
   font-weight: normal;
   padding: 0;
-}
-
-.form-signin {
-
-  .form-signin-heading {
-    margin-bottom: 10px;
-  }
-
-  background-color: #e5e5e5;
-  border: 1px solid #e5e5e5;
-  border-radius: 5px 5px 5px 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  margin: 0 auto 20px;
-  max-width: 318px;
-  padding: 19px 29px 29px;
 }
 
 #annoucement_full_type {
