--- a/src/Hyper/AdsBundle/Resources/views/Admin/Announcement/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Announcement/edit.html.twig
@@ -8,7 +8,7 @@
     <form action="{{ path('admin_announcement_update_handler', { 'announcement': announcement.id }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
         <div class="form-actions">
-            <a href="{{ path('admin_announcement_index') }}" class="btn">{{ 'back.to.the.list'|babel }}</a>
+            <a href="{{ path('admin_announcement_index') }}" class="btn btn-link">{{ 'back.to.the.list'|babel }}</a>
             <div class="pull-right">
                 <button type="submit" class="btn btn-danger" name="action" value="delete">{{ 'delete'|babel }}</button>
                 <button type="submit" class="btn btn-primary" name="action" value="update">{{ 'edit'|babel }}</button>
