--- a/src/Hyper/AdsBundle/Resources/views/Admin/Page/new.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Page/new.html.twig
@@ -8,7 +8,7 @@
 <form action="{{ path('admin_page_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <div class="form-actions">
-        <a href="{{ path('admin_page') }}" class="btn">{{ 'back.to.the.list'|babel }}</a>
+        <a href="{{ path('admin_page') }}" class="btn btn-link">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
             <button type="submit" class="btn btn-primary">{{ 'create'|babel }}</button>
         </div>
