--- a/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,6 +1,6 @@
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password user-form">
+<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="form-horizontal col-lg-8 col-offset-2" role="form">
     {{ form_widget(form) }}
     <div class="form-actions">
-        <input type="submit" class="btn btn-primary pull-right" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" />
+        <input type="submit" class="btn btn-primary" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
 </form>
