--- a/src/Hyper/AdsBundle/Resources/views/Default/heroUnit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/heroUnit.html.twig
@@ -1,4 +1,4 @@
-<div class="row {% if is_granted("ROLE_USER") %}span7 {% endif %}hero-unit">
+<div class="row {% if is_granted("ROLE_USER") %}span7 {% endif %}jumbotron">
     <h1>Acid Ad Server</h1>
     <blockquote>Many a small thing has been made large by the right kind of advertising.
         <br/>
