--- a/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form "HyperAdsBundle::acidFormTheme.html.twig" %}
+
 <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="form-horizontal col-lg-8 col-offset-2" role="form">
     {{ form_widget(form) }}
     <div class="form-actions">
