--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -65,3 +65,28 @@ table label.table {
     padding: 5px 0;
   }
 }
+
+#hyper_payment_form {
+
+  .input-group > .col-lg-3 {
+    padding: 0;
+    &:first-child {
+      padding-left: 15px;
+    }
+    &:last-child {
+      padding-right: 15px;
+    }
+  }
+
+  select.form-control {
+    float: left;
+  }
+}
+
+.cke {
+  clear: both;
+}
+
+.payment-info {
+  margin-top: 15px;
+}
