--- a/src/Hyper/AdsBundle/Resources/views/User/Announcement/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Announcement/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends "::base.html.twig" %}
+{% form_theme form "HyperAdsBundle::acidFormTheme.html.twig" %}
 
 {% block title %}
 {{ 'announcement.edit'|babel({'%announcement%': announcement}) }}
@@ -7,27 +8,8 @@
 {% block body %}
 
 <h1>{{ 'announcement.edit'|babel({'%announcement%': announcement}) }}</h1>
-<form method="post" action="{{ url('user_announcement_update_handler', {'announcement': announcement.id}) }}">
-    <div>
-        {{ form_label(form.title) }}
-        {{ form_widget(form.title) }}
-        {{ form_errors(form.title) }}
-    </div>
-    <div>
-        {{ form_label(form.announcementPaymentType) }}
-        {{ form_widget(form.announcementPaymentType) }}
-        {{ form_errors(form.announcementPaymentType) }}
-    </div>
-    <div class="clearfix">
-        {{ form_label(form.disabled) }}
-        {{ form_widget(form.disabled) }}
-        {{ form_errors(form.disabled) }}
-    </div>
-    <div>
-        {{ form_widget(form.description) }}
-        {{ form_errors(form.description) }}
-        {{ form_rest(form) }}
-    </div>
+<form method="post" action="{{ url('user_announcement_update_handler', {'announcement': announcement.id}) }}" class="form-horizontal col-lg-12" role="form">
+    {{ form_widget(form) }}
     <div class="form-actions">
         <a class="btn btn-link" href="{{ path('user_announcement_index') }}">{{ 'back.to.the.list'|babel }}</a>
         <div class="pull-right">
