--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
@@ -13,21 +13,24 @@
     {{ 'pay.for.banner.in.zone.info'|babel({'%banner%': banner.title, '%zone%': zone}) }}
 </div>
 
-<form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post">
-    {{ form_widget(form) }}
-    <div class="form-actions">
-        <div id="days-info" class="pull-left"></div>
-        <div class="pull-right">
-            <input type="submit" class="btn btn-primary btn-large" value="{{ 'next'|babel }}"/>
+<div class="row">
+    <form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post" class="form-horizontal col-lg-8 col-offset-2" role="form">
+        {{ form_widget(form) }}
+        <div class="form-actions">
+            <div id="days-info" class="pull-left"></div>
+            <div class="pull-right">
+                <input type="submit" class="btn btn-primary btn-large" value="{{ 'next'|babel }}"/>
+            </div>
         </div>
-    </div>
-</form>
-
-<ol class="muted">
-    <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie (5) jest już przekroczona;</li>
-    <li>Jest to orientacyjna kwota, nie należy się nią ściśle sugerować;</li>
-    <li>Są to dni, w których Twój banner nie będzie wyświetlany ze względu na przekroczoną liczbę dopuszczalnych bannerów w strefie (5). Zauważ, że cena jest również dopasowana do tej liczby - <strong>nie zapłacisz za dni, w czasie których Twój banner nie będzie widoczny</strong>.</li>
-</ol>
+    </form>
+</div>
+<div class="row">
+    <ol class="text-muted payment-info">
+        <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie (5) jest już przekroczona;</li>
+        <li>Jest to orientacyjna kwota, nie należy się nią ściśle sugerować;</li>
+        <li>Są to dni, w których Twój banner nie będzie wyświetlany ze względu na przekroczoną liczbę dopuszczalnych bannerów w strefie (5). Zauważ, że cena jest również dopasowana do tej liczby - <strong>nie zapłacisz za dni, w czasie których Twój banner nie będzie widoczny</strong>.</li>
+    </ol>
+</div>
 
 {% endblock %}
 
