--- a/src/Hyper/AdsBundle/Resources/views/Admin/BannerConfig/zone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/BannerConfig/zone.html.twig
@@ -46,7 +46,7 @@
             {% endfor %}
         </table>
         <input type="hidden" name="zoneId" value="{{ zone.id }}" />
-        <input type="submit" class="button" value="{{ 'save'|babel }}">
+        <input type="submit" class="button" value="{{ 'save'|babel }}" />
     </p>
 </form>
 
