--- a/src/Hyper/AdsBundle/Resources/views/Admin/Zone/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Zone/index.html.twig
@@ -56,11 +56,7 @@
 {% else %}
 <div class="message">{{ 'no.entities'|babel }}</div>
 {% endif %}
-<ul>
-    <li>
-        <a href="{{ path('admin_zone_new') }}">
-            {{ 'create.new.entry'|babel }}
-        </a>
-    </li>
-</ul>
+    <div class="pull-right">
+        <a href="{{ path('admin_zone_new') }}" class="btn btn-primary">{{ 'create.new.entry'|babel }}</a>
+    </div>
 {% endblock %}
