--- a/src/Hyper/AdsBundle/Resources/views/Admin/Zone/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Admin/Zone/edit.html.twig
@@ -1,28 +1,26 @@
 {% extends "::base.html.twig" %}
+{% form_theme edit_form "HyperAdsBundle::acidFormTheme.html.twig" %}
+
 {% block title %}
 {{ 'edit.zone'|babel({'zoneName': entity.name}) }}
 {% endblock %}
 {% block body %}
 <h1>{{ 'edit.zone'|babel({'zoneName': entity.name}) }}</h1>
 
-<form action="{{ path('admin_zone_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+<form action="{{ path('admin_zone_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }} class="form-horizontal col-lg-8 col-offset-2" role="form">
     {{ form_widget(edit_form) }}
-    <p>
-        <button type="submit">{{ 'edit'|babel }}</button>
-    </p>
+    <div class="form-actions">
+        <a href="{{ path('admin_zone') }}" class="btn btn-link">{{ 'back.to.the.list'|babel }}</a>
+        <div class="pull-right">
+            <button type="submit" class="btn btn-primary">{{ 'edit'|babel }}</button>
+        </div>
+    </div>
 </form>
 
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_zone') }}">
-            {{ 'back.to.the.list'|babel }}
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('admin_zone_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">{{ 'delete'|babel }}</button>
-        </form>
-    </li>
-</ul>
+<div class="record_actions">
+    <form action="{{ path('admin_zone_delete', { 'id': entity.id }) }}" method="post">
+        {{ form_widget(delete_form) }}
+        <button type="submit" class="btn btn-danger">{{ 'delete'|babel }}</button>
+    </form>
+</div>
 {% endblock %}
