--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -42,9 +42,9 @@
 		</a>
 </td></tr></table>
 
-		<p>Wpłaty z kont w mBanku i MultiBanku są księgowane w ciągu kilku minut, reszta zgodnie z cyklem przelewów międzybankowych, a więc trzy razy dziennie w dni robocze. <b>Uwaga, należy dokładnie podać tytuł przelewu zgodnie ze spersonalizowanymi dla każdego konta, danymi w Bitcurex, gdyż transakcje księgowane są automatycznie na podstawie tego tytułu przelewu.</b> Bitcurex nie pobiera prowizji od wymiany walut, nie pobiera również prowizji od wpłat złotówkowych. Aby kupić BTC na giełdzie Bitcurex, nie trzeba okazywać dokumentów, jak na przykład jest to wymagane w Mt.Gox.</p>
+		<p>Wpłaty z kont w mBanku i MultiBanku są księgowane w ciągu kilku minut, reszta zgodnie z cyklem przelewów międzybankowych, a więc trzy razy dziennie w dni robocze. <b>Uwaga, należy dokładnie podać tytuł przelewu zgodnie ze spersonalizowanymi dla każdego konta, danymi w Bitcurex, gdyż transakcje księgowane są automatycznie na podstawie tego tytułu przelewu.</b> Bitcurex pobiera niewielką prowizję 0.4% od wymiany walut, nie pobiera prowizji od wpłat złotówkowych. Aby kupić BTC na giełdzie Bitcurex, nie trzeba okazywać dokumentów, jak na przykład jest to wymagane w Mt.Gox.</p>
 
-		<p>Po przelaniu złotówek do giełdy Bitcurex, zamieniasz je na bitcoiny. Zakupu natychmiastowego można dokonać po aktualnej cenie transakcyjnej. Uwaga! Gra na giełdzie walutowej nie jest objęta niniejszym podręcznikiem.</p>
+		<p>Po przelaniu złotówek do giełdy Bitcurex, zamieniasz je na bitcoiny. Zakupu natychmiastowego można dokonać po aktualnej cenie transakcyjnej. Uwaga! Gra na giełdzie walutowej nie jest objęta niniejszym podręcznikiem. Pamiętaj, że zabawa na giełdzie walutowej jest ryzykowna, dlatego zakupu BTC dokonaj tuż przed transakcją z hyperrealem.</p>
 
 		<h3>Na co trzeba zwrócić uwagę przy transakcjach w BTC?</h3>
 
