--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -25,17 +25,25 @@
     <li{% if app.request.get('_route') == 'user_banner_list' %} class="active"{% endif %}>
         <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
     </li>
+	<!--
     <li{% if app.request.get('_route') == 'user_announcement_index' %} class="active"{% endif %}>
         <a href="{{ url('user_announcement_index') }}">{{ 'announcement.plural.yours'|babel }}</a>
     </li>
+	-->
     <li{% if app.request.get('_route') == 'default_zones_info' %} class="active"{% endif %}>
         <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
-    </li>
-    <li>
-        <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
     </li>
     <li{% if app.request.get('_route') == 'default_rules' %} class="active"{% endif %}>
         <a href="{{ path('default_rules') }}">{{ 'rules'|babel }}</a>
     </li>
+	<li class="nav-header">{{ 'analytics'|babel }}</li>
+	<li><a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a></li>
+	<li><a href="https://www.quantcast.com/labs/real-time/site/p-61J5S5NDjdNmM" target="_blank" class="external">{{ 'quantcast.stats'|babel }}</a></li>
+	</li>
     {% endif %}
 </ul>
+<hr>
+<center>
+<p>Czy wiesz, że <i>hyperreal.info</i> to jeden z najpopularniejszych serwisów w polskim internecie?</p>
+	<iframe frameborder='0' scrolling='no' marginheight='0' marginwidth='0' height='60' width='120' src='http://widget.quantcast.com/p-61J5S5NDjdNmM/3'></iframe>
+</center>
