remove currency from Advertiser entity and dependants

--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
@@ -39,7 +39,7 @@
 {% raw %}
 <script type="text/html" id="price-tpl">
     Liczba dni do zapłaty <sup>1</sup>: <strong>{{days}}</strong><br/>
-    Koszt <sup>2</sup>: ~<strong>{{price}} {{currency}}</strong><br />
+    Koszt <sup>2</sup>: <strong>{{price}} {{currency}}</strong><br />
     <ul class="no-payment-possible">
         {{#commonDays}}
         <li>Od <strong>{{s}}</strong> do <strong>{{e}}</strong><sup>3</sup></li>
