tutorial and layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,13 @@
         <title>{% block title %}Welcome!{% endblock %} - {{ page_title|babel }}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.min.css') }}" media="screen" />
-        <link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
         <link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="{{ asset('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('components/fancybox/source/jquery.fancybox.pack.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('git/dragend/dist/dragend-0.2.0_rc3.min.js') }}"></script>
+        <link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.min.css') }}" media="screen" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -37,7 +39,7 @@
     <div id="footer">
         <div class="container">
             <p class="muted credit">
-                &copy; <a href="http://hyperreal.info/">hyperreal.info</a> 2012-{{ 'now'|date('Y') }} <br/>
+                <span class="glyphicon glyphicon-copyright-mark"></span> <a href="http://hyperreal.info/">hyperreal.info</a> 2012-{{ 'now'|date('Y') }} <br/>
                 {{ 'powered.by.acid'|babel }} | <a href="https://github.com/hyperreal/AcidAdServer" class="github-fork">{{ 'acid.promo.github'|babel }}</a>
             </p>
         </div>
