--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -1,4 +1,5 @@
 <ul class="nav nav-pills nav-stacked">
+	<li class="nav-divider"></li>
     {% if is_granted('ROLE_ADMIN') %}
     <li{% if app.request.get('_route') == 'admin_advertiser' %} class="active"{% endif %}>
         <a href="{{ path('admin_advertiser') }}">{{ 'advertisers'|babel }}</a>
@@ -18,9 +19,11 @@
     </li>
     <li class="nav-divider"></li>
     {% endif %}
+
     {% if is_granted("ROLE_USER") %}
-    <li{% if app.request.get('_route') == 'acid_tutorial' %} class="active"{% endif %}>
-        <a href="{{ url('acid_tutorial') }}">{{ 'menu.guide'|babel }}</a>
+	<li class="nav-header">{{ 'webshop'|babel }} &nbsp; <span class="glyphicon glyphicon-shopping-cart"></li>
+    <li{% if app.request.get('_route') == 'default_zones_info' %} class="active"{% endif %}>
+        <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
     </li>
     <li{% if app.request.get('_route') == 'user_banner_list' %} class="active"{% endif %}>
         <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
@@ -30,20 +33,26 @@
         <a href="{{ url('user_announcement_index') }}">{{ 'announcement.plural.yours'|babel }}</a>
     </li>
 	-->
-    <li{% if app.request.get('_route') == 'default_zones_info' %} class="active"{% endif %}>
-        <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
+
+	<li class="nav-divider"></li>
+	<li class="nav-header">{{ 'help'|babel }}&nbsp; <span class="glyphicon glyphicon-eye-open"></li>
+    <li{% if app.request.get('_route') == 'acid_tutorial' %} class="active"{% endif %}>
+        <a href="{{ url('acid_tutorial') }}">{{ 'menu.guide'|babel }}</a>
     </li>
     <li{% if app.request.get('_route') == 'default_rules' %} class="active"{% endif %}>
         <a href="{{ path('default_rules') }}">{{ 'rules'|babel }}</a>
     </li>
-	<li class="nav-header">{{ 'analytics'|babel }}</li>
+
+	<li class="nav-divider"></li>
+	<li class="nav-header">{{ 'analytics'|babel }} &nbsp; <span class="glyphicon glyphicon-tasks"></li>
 	<li><a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a></li>
 	<li><a href="https://www.quantcast.com/labs/real-time/site/p-61J5S5NDjdNmM" target="_blank" class="external">{{ 'quantcast.stats'|babel }}</a></li>
+
+	<li class="nav-divider"></li>
 	</li>
     {% endif %}
 </ul>
-<hr>
 <center>
 <p>Czy wiesz, że <i>hyperreal.info</i> to jeden z najpopularniejszych serwisów w polskim internecie?</p>
-	<iframe frameborder='0' scrolling='no' marginheight='0' marginwidth='0' height='60' width='120' src='http://widget.quantcast.com/p-61J5S5NDjdNmM/3'></iframe>
+	<iframe frameborder='0' scrolling='no' marginheight='0' marginwidth='0' height='60' width='120' src='https://widget.quantcast.com/p-61J5S5NDjdNmM/3'></iframe>
 </center>
